--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+ :root {
+  --base: yellow;
+  --spacing: 10px;
+  --blur: 10px;
+ }
 
+ img{
+  padding: var(--spacing);
+  background: var(--base);
+  filter: blur(var(--blur));
+ }
+ 
+ .hl {
+  color:var(--base);
+ }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +60,19 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handle() {
+      const suffix = this.dataset.sizing || ''; //lay sizing hoac k co sizing thi de trong
+       //de select variable thi select document
+       document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix) //name duoc set trong html
+    };
+
+    inputs.forEach(input => input.addEventListener('change',handle));
+    inputs.forEach(input => input.addEventListener('mousemove',handle));
+
+   
+
   </script>
 
 </body>
