--- a/index-START 1.html
+++ b/index-START 1.html
@@ -22,7 +22,25 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+:root {
+  --base: yellow;
+  --spacing: 10px;
+  --blur:10px;
 
+}
+
+img {
+  background: var(--base);
+  filter:blur(var(--blur));
+  padding: var(--spacing);
+}
+
+.hl{
+  color: var(--base);
+
+}
+
+  
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +64,18 @@
   </style>
 
   <script>
+
+const inputs = document.querySelectorAll('.controls input');
+
+function handle() {
+  const suffix = this.dataset.sizing || '';
+ document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix);
+};
+
+inputs.forEach(input => input.addEventListener('change',handle));
+inputs.forEach(input => input.addEventListener('mousemove',handle));
+
+
   </script>
 
 </body>
