update: 3rd attempt

--- a/index-START 2.html
+++ b/index-START 2.html
@@ -22,7 +22,22 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+ :root {
+  --base:yellow;
+  --blur: 10px;
+  --spacing:10px;
+ }
 
+ img {
+  background: var(--base);
+  padding: var(--spacing);
+  filter: blur(var(--blur));
+
+ }
+
+ .hl {
+  color: var(--base);
+ }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +61,19 @@
   </style>
 
   <script>
+
+    const inputs = document.querySelectorAll('.controls input');
+   
+    function handle() {
+      const suffix = this.dataset.sizing || '';
+      console.log(Object.keys(document.documentElement));
+      document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix);
+    };
+
+    inputs.forEach(input => input.addEventListener('change', handle));
+    inputs.forEach(input => input.addEventListener('mousemove', handle));
+
+
   </script>
 
 </body>
